# voxlab

./: Cargo.toml
examples/: 01a-local-audio.rs  02-llm-say-one-thing.rs  03-transcription.rs
src/: frame.rs  lib.rs  main.rs  processor.rs  task.rs
src/audio/: mod.rs  resampler.rs  vad.rs
src/pipeline/: mod.rs  pipeline.rs  runner.rs  sink.rs  source.rs  task.rs
src/services/: mod.rs  stt.rs
src/services/deepgram/: mod.rs  stt.rs  tts.rs
src/services/openai/: llm.rs  mod.rs
src/transport/: base.rs  error.rs  input.rs  media_sender.rs  mod.rs  output.rs
src/transport/local/: input.rs  mod.rs  output.rs
