[package]
name = "voxlab"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxlab"
path = "src/lib.rs"

[dependencies]
ractor = "0.7"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
cpal = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "01a-local-audio"
path = "examples/01a-local-audio.rs"
