[package]
name = "voxlab"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxlab"
path = "src/lib.rs"

[dependencies]
ractor = "0.7"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
cpal = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
voice_activity_detector = "0.2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
rubato = "0.15"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "01a-local-audio"
path = "examples/01a-local-audio.rs"

[[example]]
name = "02-llm-say-one-thing"
path = "examples/02-llm-say-one-thing.rs"

[[example]]
name = "03-transcription"
path = "examples/03-transcription.rs"
